Search thingies now Pageable, now relying on database and sql instead of java code